2007-01-24  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Added "Sakar 56399 Spyshot"
		     Added "Pixart Gemini Keychain Camera"
		     reported by R P Herrold <herrold@owlriver.com>
	* README.mars: Added these cameras there, too. 


2006-12-23  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Added "ION digital camera"
	* README.mars: Added "ION digital camera"

2006-11-19  Marcus Meissner <marcus@jet.franken.de>

	* mars.c,mars.h: Made some functions static to mars.c

2006-09-23  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: RAW files saved now with pixelsize information, 
		     so that the info in them is "self-contained".
	* mars.c:    usleep() added to mars_routine() to fix a USB timing 
		     problem reported by conon <troll@arach.net.au>. Changes
		     to decompression algorithm proposed by conon also 
		     adopted. Changes to way of handling RAW files imply 
		     elimination of mars_get_picture_width().
	* mars.h:    now-extraneous functions de-listed. 	
	* README:    updated; changes to RAW file header explained.
	* protocol.txt: updated.


2006-08-28  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Added INNOVAGE Digital Mini. Corrected USB Product
		     number for Philips Keychain camera (worked anyway, 
		     but number was wrong). 
		     Minor tweak to gamma setting.
		     Improvements to camera_manual(). 
	* mars.c:    More improvements in mars_decompress().
	* README:    updated.


2006-02-08  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Added two new cameras. One is the Argus QuickClix, 
		     which uses a new, still unsolved compression codec and
		     is therefore marked as DEPRECATED. 
		     The other cameras I personally own are upgraded to
		     TESTING, because of improvements in decompression.
		     Minor code changes in get_file_func().
		     Improvements to camera_manual(). 
	* mars.c:    Improvements in mars_decompress().
		     mars_postprocess() eliminated.